# voxel

./: Cargo.toml
assets/shaders/: text.wgsl  world.wgsl
voxel/: Cargo.toml
voxel-util/: Cargo.toml
voxel-util/src/: bind_group.rs  context.rs  lib.rs  render_pipeline.rs  sampler.rs  spritesheet.rs  texture.rs  uniform.rs
voxel/src/: application.rs  camera.rs  error.rs  main.rs  window.rs
voxel/src/render/: debug_pass.rs  frustum_culling.rs  mod.rs  renderer.rs  text_pass.rs  vertex.rs  world_pass.rs
voxel/src/world/: block.rs  block_face.rs  chunk.rs  chunk_map.rs  chunks.rs  face.rs  generator.rs  mesher.rs  meshes.rs  mod.rs
voxel/src/world2/: face.rs  generator.rs  mesher.rs
