[package]
name = "voxel-util"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { workspace = true, features = ["png"] }
wgpu = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
paste = "1.0.15"
