[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

[dependencies]
voxel-util = { workspace = true }
bytemuck = { version = "1.16.1", features = ["derive"] }
image = { version = "0.25.1", features = ["png"] }
glam = { version = "0.28.0", features = ["bytemuck"] }
wgpu = { workspace = true }
pollster = "0.3.0"
winit = "0.30.3"
noise = "0.9.0"
itertools = "0.13.0"
thiserror = "1.0.63"
log = "0.4.22"
env_logger = "0.11.5"
smallvec = "1.13.2"
rayon = "1.10.0"
wgpu_text = "0.9.0"
parking_lot = "0.12.3"
